# datafiles

./: CMakeLists.txt  README.md
include/: CsvFilePrinter.h  DataFilePrinter.h  DataFileReader.h
src/: CsvFilePrinter.cpp  DataFilePrinter.cpp  DataFileReader.cpp  main.cpp
